<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">MyHomeIot</string>
    <string name="user_profile">Perfil de usuario</string>
    <string name="connection">Conexion</string>
    <string name="admin_home">Administrar ubicaciones</string>
    <string name="notifications">Notificaciones</string>
    <string name="mqttServer">conectando...</string>
    <string name="nameDevice">Nombre dispositivo (20 caracteres)</string>
    <string name="addDevice">Nuevo dispositivo</string>
    <string name="installDevice">Instalar dispositivo</string>
    <string name="settings">Configuracion</string>
    <string name="settingsUser">Usuario</string>
    <string name="settingsPassword">Contraseña</string>
    <string name="settingsDni">Dni</string>
    <string name="settingsMail">Correo</string>
    <string name="settingsTelephone">Telefono</string>
    <string name="settingsSave">Guardar</string>
    <string name="settingsNewAccount">Por favor, crea una cuenta nueva para poder acceder</string>
    <string name="settingsInvalidPassword">contraseña invalida</string>
    <string name="settingsInvalidDni">Dni invalido</string>
    <string name="settingsInvalidMail">Mail invalido</string>
    <string name="settingsInvalidTelephone">Telefono invalido</string>
    <string name="settingsInvalidUser">usuario invalido</string>


    <string name="esptouch_message_permission">La app requiere permisos de localizacion para poder detectar las redes wifi. \nClick para obtener el permiso</string>
    <string name="esptouch_message_location">Por favor, activa la ubicacion gps para poder localizar la red wifi.</string>
    <string name="esptouch_message_wifi_connection">Por favor, conecta el dispositivo a una red wifi</string>
    <string name="esptouch_message_wifi_frequency">La red wifi actual es 5G. Por favor, conecta el dispositivo a una red 2.4Ghz.</string>

    <string name="esptouch1_title">EspTouch</string>
    <string name="esptouch1_about_version">EspTouch Version: %s</string>
    <string name="esptouch1_ssid_title">SSID: </string>
    <string name="esptouch1_bssid_title">BSSID: </string>
    <string name="esptouch1_password_title">Contraseña: </string>
    <string name="esptouch1_device_count_title">nº Dispositivos: </string>
    <string name="esptouch1_package_broadcast">Broadcast</string>
    <string name="esptouch1_package_multicast">Multicast</string>
    <string name="esptouch1_confirm">Configurar...</string>
    <string name="esptouch1_wifi_5g_message">El dispositivo no soporte wifi 5G. Por favor, conecta el movil a una wifi de 2.4Ghz o intenta configurarlo en modo multicast</string>
    <string name="esptouch1_location_permission_title">⚠Aviso</string>
    <string name="esptouch1_location_permission_message">On Android M or higher version, App can\'t get Wi-Fi connection information if you forbid Location permission.</string>
    <string name="esptouch1_configuring_message">Esptouch esta configurando. Espera un momento</string>
    <string name="esptouch1_configure_wifi_change_message">Wifi desconectado</string>
    <string name="esptouch1_configure_result_failed">EspTouch failed</string>
    <string name="esptouch1_configure_result_failed_port">Create EspTouch task failed, the EspTouch port could be used by other thread</string>
    <string name="esptouch1_configure_result_success">Con exito!</string>
    <string name="esptouch1_configure_result_success_item">BSSID = %1$s, IP = %2$s</string>
    <string name="esptouch1_send_data_to_device">Enviando datos al dispositivo</string>
    <string name="about_app_version">App Version: %s</string>
    <string name="menu_item_about">About...</string>
    <string name="add_device_id_device">nuevo id dispositivo (9 caracteres)</string>
    <string name="action_save">Guardar</string>
    <string name="action_scan">Escanear</string>
    <string name="inst_add_device">Escanea el qr-code del dispositivo o añadelo manualmente</string>
    <string name="correct_scan">Escaneo correcto</string>
    <string name="incorrect_scan">El escaneo no corresponde a ningun dispositivo</string>
    <string name="default_home">Casa</string>
    <string name="default_room">Salon</string>
    <string name="admin_homes">Administrar casas</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="name_home">*Nombre de la ubicación</string>
    <string name="street_home">Dirección</string>
    <string name="street_number">Nº</string>
    <string name="city">Ciudad</string>
    <string name="country">Pais</string>
    <string name="district_postal">Codigo postal</string>
    <string name="longitude">Longitud</string>
    <string name="latitude">Latitud</string>
    <string name="text_messages_admin_home">Rellena los datos de la ubicacion</string>
    <string name="province">Provincia</string>
    <string name="add_home">Añadir ubicacion</string>
    <string name="button_ok">Aceptar</string>
    <string name="site_no_empty">La ubicacion no esta vacia. Si aceptas, se borraran todos los dispositivos y estancias.</string>
    <string name="warning">Aviso!</string>
    <string name="cancel">Cancelar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_room">Añadir estancia</string>
    <string name="edit_rooms">Editar estancias</string>
    <string name="rename_device">Renombrar dispositivo</string>
    <string name="delete_device">Borrar dispositivo</string>
    <string name="move_device">Mover dispositivo</string>
    <string name="auto">AUTO</string>
    <string name="manual">MANUAL</string>
    <string name="arrancando">ARRANCANDO</string>
    <string name="no_programs">SIN PROGRAMAS</string>
    <string name="upgrade_in_progress">ACTUALIZANDO</string>
    <string name="syncronizing">SINCRONIZANDO</string>
    <string name="waiting_start">ESPERANDO FIN DE ARRANQUE</string>
    <string name="start_before_Factory">ARRANQUE DESPUES DE FACTORY</string>
    <string name="unknown">INDETERMINADO</string>
    <string name="from">Desde</string>
    <string name="to">hasta</string>
    <string name="abrev_monday">L</string>
    <string name="abrev_tuesday">M</string>
    <string name="abrev_wednesday">X</string>
    <string name="abrev_thursday">J</string>
    <string name="abrev_friday">V</string>
    <string name="abrev_saturday">S</string>
    <string name="abrev_sunday">D</string>
    <string name="new_schedule">Nuevo Programa</string>
    <string name="modify_schedule">Modificar programa</string>
    <string name="reset_device">Reset...</string>
    <string name="factory_reset_device">Reinicio de Fabrica...</string>
    <string name="upgrade_device">Actualizar...</string>
    <string name="confirm_reset">El dispositivo se reiniciara pero se conservará su configuración</string>
    <string name="confirm_factory_reset">El dispositivo volvera a valores de fabrica</string>
    <string name="confirm_upgrade_firmware">El dispositivo instalara la nueva version disponible</string>
    <string name="upgrading">Actualizando...</string>
    <string name="upgrade_succesfully">Actualización realizada con éxito</string>
    <string name="upgrade_unsucessfully">Actualizacion fallida</string>
    <string name="new_version_available">Nueva versión disponible</string>
    <string name="error_dates">Error en las fechas configuradas!</string>
    <string name="error">Error!</string>
    <string name="error_new_device">Error creando nuevo dispositivo</string>
    <string name="error_device_exits">El dispositivo ya existe!</string>
    <string name="none_home">Ninguna estancia</string>
    <string name="error_message_uniq_home">No se puede borrar la ultima casa</string>
    <string name="error_home">Error en casa</string>
    <string name="reseting">Reiniciando...</string>
    <string name="factoring">Haciendo Factory Reset</string>
    <string name="succesfull">Operacion realizada con exito</string>
    <string name="unsucessfull">Operación realizada sin éxito</string>
    <string name="local">local</string>
    <string name="remote">remoto</string>
    <string name="item_devicetabs">item_deviceTabs</string>
    <string name="add_home_text">Escribe el nombre de la casa que quieres añadir</string>
    <string name="modify_name_room">Modificar el nombre de la habitación</string>
    <string name="modify_name_room_text">Introduce el nuevo nombre de la habitación</string>
    <string name="error_message_uniq_room">Error!, no se puede borrar la última habitación</string>
    <string name="error_connection_device">El dispositivo se encuentra offline temporalmente</string>
    <string name="week_days">Dias de la semana</string>
    <string name="centigrates">ºC</string>
    <string name="modify_parameter_message">Modificación del parametro del dispositivo</string>
    <string name="delete_device_message">Si aceptas el dispositivo se borrará de la aplicacion pero seguira funcionando</string>


</resources>