<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".AdminHomeFragment"
    android:background="?attr/colorSurface"
    android:orientation="vertical">


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/buttonSaveHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/add_room"
        app:fabSize="normal"
        android:layout_gravity="right"
        android:tint="@color/colorAccent"
        android:src="@drawable/ic_action_save"
        app:backgroundTint="?attr/colorPrimaryContainer"
        android:layout_margin="5dp"/>


            <GridLayout
                android:id="@+id/gridLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:columnCount="2"
                android:rowCount="10">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/editRooms"
                    android:layout_width="320dp"
                    android:layout_height="wrap_content"
                    android:enabled="true"
                    android:hint="@string/edit_rooms"
                    android:maxLines="15"
                    android:drawableStart="@drawable/ic_home_admin"
                    android:drawablePadding="10dp"
                    android:layout_gravity="top"
                    android:textSize="18sp"/>


                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/imageEditRooms"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="end"
                    android:src="@drawable/ic_right_arrow"/>

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editNameHome"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:hint="@string/name_home"
                    android:maxLength="15"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:drawableStart="@drawable/ic_action_user"
                    android:layout_gravity="top"
                    android:drawablePadding="10dp">

                </com.google.android.material.textfield.TextInputEditText>

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/imageEditNameHome"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:src="@drawable/ic_action_edit">
                </androidx.appcompat.widget.AppCompatImageView>

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editAdress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:hint="@string/street_home"
                    android:maxLength="50"
                    android:drawableStart="@drawable/ic_action_address"
                    android:layout_gravity="top"
                    android:drawablePadding="10dp">

                </com.google.android.material.textfield.TextInputEditText>

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/imageEditAdress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:src="@drawable/ic_action_edit">

                </androidx.appcompat.widget.AppCompatImageView>

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editNumberAddress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:hint="@string/street_number"
                    android:maxLength="9"
                    android:maxLines="1"
                    android:inputType="number"
                    android:drawableStart="@drawable/ic_action_number_address"
                    android:layout_gravity="top"
                    android:drawablePadding="10dp">
                </com.google.android.material.textfield.TextInputEditText>

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/imageEditNumberAddress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:src="@drawable/ic_action_edit">
                </androidx.appcompat.widget.AppCompatImageView>


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editCP"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:hint="@string/district_postal"
                    android:inputType="number"
                    android:maxLines="1"
                    android:layout_gravity="top"
                    android:drawableStart="@drawable/ic_action_cp"
                    android:drawablePadding="10dp">

                </com.google.android.material.textfield.TextInputEditText>

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/imageEditCP"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:src="@drawable/ic_action_edit"/>

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editCity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:hint="@string/city"
                    android:inputType="text"
                    android:maxLines="15"
                    android:drawableStart="@drawable/ic_action_city"
                    android:drawablePadding="10dp"
                    android:layout_gravity="top">

                </com.google.android.material.textfield.TextInputEditText>

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/imageEditCity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:src="@drawable/ic_action_edit">

                </androidx.appcompat.widget.AppCompatImageView>

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editProvince"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:enabled="true"
                    android:hint="@string/province"
                    android:inputType="text"
                    android:maxLines="15"
                    android:drawableStart="@drawable/ic_action_province"
                    android:drawablePadding="10dp"
                    android:layout_gravity="top">

                </com.google.android.material.textfield.TextInputEditText>

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/imageEditProvince"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:src="@drawable/ic_action_edit">

                </androidx.appcompat.widget.AppCompatImageView>

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editCountry"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:hint="@string/country"
                    android:inputType="text"
                    android:maxLines="15"
                    android:drawableStart="@drawable/ic_action_country"
                    android:drawablePadding="10dp"
                    android:layout_gravity="top">

                </com.google.android.material.textfield.TextInputEditText>

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/imageEditCountry"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:src="@drawable/ic_action_edit">

                </androidx.appcompat.widget.AppCompatImageView>

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editLongitude"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:hint="@string/longitude"
                    android:maxLines="15"
                    android:inputType="numberDecimal"
                    android:drawableStart="@drawable/ic_action_ubication"
                    android:drawablePadding="10dp"
                    android:layout_gravity="top">

                </com.google.android.material.textfield.TextInputEditText>

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/imageEditLongitude"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:src="@drawable/ic_action_edit">
                </androidx.appcompat.widget.AppCompatImageView>


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editLatitude"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:hint="@string/latitude"
                    android:maxLines="15"
                    android:inputType="numberDecimal"
                    android:drawableStart="@drawable/ic_action_ubication"
                    android:drawablePadding="10dp"
                    android:layout_gravity="top"/>


                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/imageEditLatitude"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:src="@drawable/ic_action_edit" />



            </GridLayout>






    </LinearLayout>






