<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ActionSwitchScheduleFragment"
        android:background="?attr/colorSurfaceVariant">


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textScheduleType"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:gravity="center"
            android:text="@string/new_schedule"
            app:layout_constraintTop_toTopOf="parent"
            android:background="?attr/colorPrimary"
            android:textColor="?attr/colorOnPrimary">

        </androidx.appcompat.widget.AppCompatTextView>


        <TextView

            android:id="@+id/titlePanelWeek"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/week_days"
            android:background="?attr/colorSurfaceVariant"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@+id/textScheduleType" />


        <LinearLayout
            android:id="@+id/layoutWeekPanel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/titlePanelWeek">

            <include
                android:id="@+id/layoutWeekSchedule"
                layout="@layout/schedule_week_list"></include>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layouttitleTimePicker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="100"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/layoutWeekPanel">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/titleFrom"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:gravity="center"
                android:text="@string/from" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/titleTo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:gravity="center"
                android:text="@string/to" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutTimePickersPanel"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:orientation="horizontal"
            android:weightSum="100"
            app:layout_constraintTop_toBottomOf="@+id/layouttitleTimePicker">

            <TimePicker
                android:id="@+id/timePickerFrom"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                style="@style/MyTimePicker">
            </TimePicker>

            <TimePicker
                android:id="@+id/timePickerTo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                style="@style/MyTimePicker">

            </TimePicker>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutButtonsTimePicker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonCancelSchedule"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:background="@drawable/round_corners_buttons"
                android:text="@string/cancel">

            </androidx.appcompat.widget.AppCompatButton>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonAcceptSchedule"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:background="@drawable/round_corners_buttons"
                android:text="@string/button_ok">

            </androidx.appcompat.widget.AppCompatButton>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutThreshold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layoutTimePickersPanel">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imageDownThreshold"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:src="@drawable/ic_action_left">

            </androidx.appcompat.widget.AppCompatImageView>


            <TextView
                android:id="@+id/textThreshold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="20.5"
                android:textSize="30sp">

            </TextView>

            <TextView
                android:id="@+id/textThresholdUnity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/centigrates"
                android:textSize="30sp"
                android:layout_marginStart="5dp">

            </TextView>


            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imageUpThreshold"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:src="@drawable/ic_action_right">

            </androidx.appcompat.widget.AppCompatImageView>

        </LinearLayout>







    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>